# rlberry

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  about.html  api.html  azure-pipelines.yml  beginner_dev_guide.html  build_docs.sh  changelog.html  codecov.yml  contributing.html  contributors.html  genindex.html  index.html  installation.html  mypy.ini  objects.inv  profile.prof  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  search.html  searchindex.js  setup.py  test_requirements.txt  user_guide.html  user_guide2.html  versions.html
.doctrees/: about.doctree  api.doctree  beginner_dev_guide.doctree  changelog.doctree  contributing.doctree  contributors.doctree  external.doctree  index.doctree  installation.doctree  user_guide.doctree  user_guide2.doctree  versions.doctree
.doctrees/auto_examples/: adastop_example.doctree  comparison_agents.doctree  example_venv.doctree  index.doctree  plot_agent_manager.doctree  plot_checkpointing.doctree  plot_kernels.doctree  plot_smooth.doctree  plot_writer_wrapper.doctree  sg_execution_times.doctree
.doctrees/basics/: comparison.doctree  create_agent.doctree  evaluate_agent.doctree  experiment_setup.doctree  multiprocess.doctree  rlberry how to.doctree  seeding.doctree
.doctrees/other/: using_gym.doctree  using_stable_baselines.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature_request.md  other-issue.md  other_issue.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflow/: dunamai.yml
.github/workflows/: doc_dev.yml  doc_stable.yml  dunamai.yml  mypy.yml  page.yml  page_2.yml  post_merge.yml  preview.yml  ready_for_CI.yml  ready_for_review.yml  static.yml  test.yml  trigger_pipeline.yml  trigger_tests.yml
_downloads/0ffc6bd397932d17ce61dd19fa2aeddf/: video_plot_gridworld.ipynb
_downloads/10b71a51b8ae10571824280d3b92d89b/: plot_mirror_bandit.py
_downloads/127146715fc2fd3e933915742ab6105d/: video_plot_rs_kernel_ucbvi.ipynb
_downloads/173ff6e8bc2ce53868f709d27fee17db/: demo_SAC.ipynb
_downloads/17eaa60d740f201a5f49ef97a8999352/: plot_TS_bandit.ipynb
_downloads/19981c091f78ea410cdf88f715c1c653/: video_plot_acrobot.ipynb
_downloads/1a729d1f3fac33522a781a4385e6594c/: plot_smooth.ipynb
_downloads/1bb1df644789ec6df652c5a18f299947/: video_plot_dqn.py
_downloads/225d1b0105b05e299cdcc1a331bbbff7/: video_plot_apple_gold.ipynb
_downloads/2eaf4542ff6c321e261f1d463c3347cb/: video_plot_springcartpole.ipynb
_downloads/31263fddb8f9f1c2667f6022c77bba23/: plot_exp3_bandit.py
_downloads/319b9da1358bcdaac7730d9e7b060a0b/: video_plot_mdqn.ipynb
_downloads/3417a3a3f45d0b0aabe0bf4561d99fa4/: plot_compare_index_bandits.ipynb
_downloads/3bbdb312874274124afb442c3376bdae/: plot_writer_wrapper.ipynb
_downloads/42d6c826bc1d10e897668e998fa9dabe/: plot_ucb_bandit.ipynb
_downloads/48b6c6ae9c9d8d7cd03022520c71c0dd/: plot_kernels.py
_downloads/4941258c21c7f0ae0a12c5981496f97f/: example_atari_breakout_vectorized_ppo.ipynb
_modules/: index.html
_sources/: api.rst.txt  beginner_dev_guide.md.txt  changelog.rst.txt  contributing.md.txt  index.md.txt  installation.md.txt
_static/: documentation_options.js
assets/: rlberry.drawio
auto_examples/: adastop_example.html  comparison_agents.html  example_venv.html  index.html  plot_agent_manager.html  plot_checkpointing.html  plot_kernels.html  plot_smooth.html  plot_writer_wrapper.html  sg_execution_times.html
basics/: comparison.html  create_agent.html  evaluate_agent.html  experiment_setup.html  multiprocess.html  rlberry how to.html  seeding.html
docs/: CONTRIBUTING.md  Makefile  about.rst  api.rst  beginner_dev_guide.md  changelog.rst  citation.rst  conf.py  contributing.md  contributors.rst  index.md  index.rst  installation.md  installation.rst  markdown_to_py.sh  quickstart.rst  requirements.txt  tutorials.rst  user_guide.md  user_guide.rst  user_guide2.md  user_guide2.rst  versions.rst
examples/: README.md  acrobot.py  adastop_example.py  comparison_agent.py  comparison_agents.py  demo_a2c.py  demo_acrobot.py  demo_adaptiveql.py  demo_agent_manager.py  demo_agent_manager_save.py  demo_agent_manager_set_writer.py  demo_agent_stats.py  demo_agent_stats_pickle.py  demo_agent_stats_set_writer.py  demo_apple_gold.py  demo_avecppo.py  demo_ball_exploration_benchmark.py  demo_cem.py  demo_cem_with_bonus.py  demo_chain.py  demo_compare_policy.py  demo_discretize_state.py  demo_dqn.py  demo_experiment_setup.py  demo_four_and_six_room.py  demo_four_room.py  demo_from_stable_baselines.py  demo_from_stable_baselines_atari.py  demo_gridworld.py  demo_gym_wrapper.py  demo_hyperparam_optim.py  demo_jax_dqn.py  demo_kernels.py  demo_kovi.py  demo_lsvi_ucb.py  demo_mbqvi.py  demo_mountain_car.py  demo_pball.py  demo_ppo.py  demo_ppo_benchmark.py  (+31 more)
examples_old/: Readme.md  demo_a2c.py  demo_agent_manager_set_writer.py  demo_apple_gold.py  demo_ball_exploration_benchmark.py  demo_chain.py  demo_gridworld.py  demo_kernels.py  demo_mbqvi.py  demo_ppo.py  demo_ppo_bonus.py  demo_rnd.py  demo_rooms.py  demo_rs_kernel_ucbvi.py  demo_rsucbvi.py  demo_twinrooms.py  demo_vis2d.py
logo/: rlberry_logo.xcf
long_tests/: ltest_a2c_cartpole.py
notebooks/: Experimental_pipeline_with_rlberry.ipynb  experimental_pipeline_with_rlberry.ipynb  introduction_to_rlberry.ipynb  rlberry_evaluate_and_optimize_agent.ipynb
other/: using_gym.html
preview_pr/: about.html  api.html  beginner_dev_guide.html  changelog.html  contributing.html  contributors.html  external.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  user_guide.html  user_guide2.html  versions.html
rlberry/: __init__.py  _version.py  check_packages.py  metadata_utils.py  types.py
scripts/: build_docs.sh  conda_env_setup.sh  construct_video_examples.sh  fetch_contributors.py  freeze.sh  full_install.sh  run_mypy.sh  run_testscov.sh  unfreeze.sh
tests/: test_A2C_on_probing_environments.py
(+1033 files in other folders)
