[tool.poetry]
name = "rlberry"
version = "v0.7.0.post17.dev0+f6675e1 "
description = "An easy-to-use reinforcement learning library for research and education"
authors = ["Omar Darwiche Domingues, Yannis Flet-Berliac, Edouard Leurent, Pierre Menard, Xuedong Shang"]
homepage = "https://github.com/rlberry-py"
repository = "https://github.com/rlberry-py"
readme = "README.md"
license="LICENSE"
classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Education",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]

[tool.poetry.dependencies]
python = "^3.9, <3.13"
scipy = "^1.6"
pygame-ce = "^2.3.2"
matplotlib = "^3.8.1"
seaborn = "0.12.2"
gymnasium = {version="^0.29.1",  extras=["atari", "accept-rom-license"]}
dill = "^0.3.7"
docopt = "^0.6.2"
pyyaml = "^6.0.1"
tqdm = "^4.66.1"
moviepy = "^1.0.3"
pyopengl = "^3.1.7"
optuna ={version="^3.4.0", optional=true}
ffmpeg-python = {version="^0.2.0", optional=true}
pyvirtualdisplay = {version="^3.0", optional=true}
opencv-python = {version="^4.8.1.78", optional=true}
ale-py = {version="^0.8.1", optional=true}
stable-baselines3 = {version="^2.1.0", optional=true}
tensorboard = {version="^2.15.1", optional=true}
torch = {version=">=2.0.0, !=2.0.1, !=2.1.0", optional=true}
pandas = "2.1.0"
numba = "^0.58.1"
scikit-fda = {version="^0.9", optional=true}
scikit-learn = {version="1.2.2", optional=true}
sphinxcontrib-video = {git = "https://github.com/sphinx-contrib/video", optional=true}
sphinx = {version="6.2.1", optional=true}
sphinx-gallery = { version= "^0.14.0", optional=true}
sphinx-math-dollar = {version="^1.2.1", optional=true}
numpydoc = {version="^1.6.0", optional=true}
myst-parser = {version="^2.0.0", optional=true}


########### hack : some dependencies are not compatible #############
# dependency of scikit-fda :
fdasrsf = {version="2.5.2", optional=true}   # new version (2.5.8) : crash all our CI  (21-02-2024)
multimethod = {version="1.10", optional=true}     # new version 1.11 : crash our tests in "rlberry/manager/tests/test_plot.py"  (21-02-2024)
###############################################################


[tool.poetry.extras]
torch = ["opencv-python", "ale-py", "stable-baselines3", "tensorboard", "torch"]
extras = ["optuna", "numba", "ffmpeg-python", "pyvirtualdisplay", "scikit-fda", "scikit-learn"]
doc = ["sphinx", "sphinx-gallery", "sphinx-math-dollar", "numpydoc", "myst-parser", "sphinxcontrib-video", "matplotlib"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-xprocess = "^0.23.0"
codecov = "^2.1.13"
black = "23.9.1"
pre-commit = "^3.5.0"
rlberry-research = {git = "https://github.com/rlberry-py/rlberry-research.git"}
rlberry-scool = {git = "https://github.com/rlberry-py/rlberry-scool.git"}
sphinxcontrib-video = {git = "https://github.com/sphinx-contrib/video", optional=true}
sphinx = {version="6.2.1", optional=true}
sphinx-gallery = { version= "^0.14.0", optional=true}
sphinx-math-dollar = {version="^1.2.1", optional=true}
numpydoc = {version="^1.6.0", optional=true}
myst-parser = {version="^2.0.0", optional=true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
